--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css");
 
+:root{
+  --primary: #A8D0E6;
+  --secondary: #374785;
+  --accent: #F76C6C;
+  --accent-dark: #E45B5B;
+  --accent-50: #F9CDCD;
+}
+
 .App {
   text-align: center;
 }
