--- a/src/styles/component-styles/button.css
+++ b/src/styles/component-styles/button.css
@@ -19,14 +19,10 @@
     margin: 0px 12px;
 }
 
-.btn:hover{
-    filter: none;
-    background: var(--accent-dark);
-    color: white;
-    border-color: var(--accent-dark);
-}
+
 
 .btn:active{
+    filter:none;
     background: var(--accent-50);
     border-color: var(--accent-50);
     color: var(--accent);
@@ -41,6 +37,13 @@
     filter: drop-shadow(0px 4px 12px rgba(247, 108, 108, 0.50));
 }
 
+.btn--primary:hover{
+    filter: none;
+    background: var(--accent-dark);
+    color: white;
+    border-color: var(--accent-dark);
+}
+
 .btn--secondary{
     background: transparent;
     color: var(--accent);
@@ -50,11 +53,22 @@
     box-sizing: border-box;
 }
 
+.btn--secondary:hover{
+    filter: none;
+    background: var(--accent-dark);
+    color: white;
+    border-color: var(--accent-dark);
+}
+
 .btn--tertiary{
     background: transparent;
     color: var(--accent);
     filter: none;
     border-color: transparent;
+}
+
+.btn--tertiary:hover{ 
+    filter: drop-shadow(0px 5px 3px rgba(247, 108, 108, 0.5));
 }
 
 
