--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   --accent-dark: #E45B5B;
   --accent-50: #F9CDCD;
   --primary-25:#EBF4F9;
+  --bg-dark: #0F1F38;
 }
 
 .App {
@@ -20,6 +21,10 @@
   align-items: center;
   padding: 8px;
   width:100%;
+}
+
+.bg-dark{
+  background: var(--bg-dark);
 }
 
 /* .App-logo {
