--- a/src/styles/component-styles/linkbutton.css
+++ b/src/styles/component-styles/linkbutton.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap');
+
 .link-btn{
     display: flex;
     flex-direction: column;
@@ -9,7 +11,6 @@ a{
     display: block;
     font-family: "Manrope", sans-serif;
     font-style: normal;
-    font-weight: bold;
     padding-bottom: 15px;
     text-decoration: none;
     font-weight: 800;
